--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,9 @@ name = "ToggleableAsserts"
 uuid = "07ecc579-1b30-493c-b961-3180daf6e3ae"
 authors = ["MasonProtter <mason.protter@gmail.com>"]
 version = "0.1.0"
+
+[extras]
+Test = “8dfed614-e22c-5e08-85e1-65c5234f0b40”
+
+[targets]
+test = [“Test”]
