--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,7 @@ authors = ["MasonProtter <mason.protter@gmail.com>"]
 version = "0.1.0"
 
 [extras]
-Test = “8dfed614-e22c-5e08-85e1-65c5234f0b40”
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = [“Test”]
+test = ["Test"]
